[gd_scene load_steps=9 format=3 uid="uid://3vsfi5k0puw0"]

[ext_resource type="FontFile" uid="uid://c2ep0aaegexyu" path="res://assets/fonts/Nabana-ShadowBold - DEMO.ttf" id="1_3yxio"]
[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_s0d8h"]
[ext_resource type="Texture2D" uid="uid://d1aslvpnqdwtf" path="res://assets/image-256x254-removebg-preview (1) (3).png" id="3_kumj3"]
[ext_resource type="Script" path="res://Scripts/AudioOptions.gd" id="3_ssu5k"]
[ext_resource type="Script" path="res://Scences/BrightnessSlider.gd" id="5_c25o4"]
[ext_resource type="Theme" uid="uid://bbvq4quc60gam" path="res://assets/themes/Default_Theme.tres" id="5_ugnno"]
[ext_resource type="ButtonGroup" uid="uid://d2rqon4ux2cd7" path="res://button_group_video.tres" id="7_twvdu"]

[sub_resource type="SystemFont" id="SystemFont_vh322"]
font_names = PackedStringArray("Impact")

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0d8h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Settings_Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_vh322")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioOptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ssu5k")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 451.0
offset_top = -316.0
offset_right = -484.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabel3" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Master"

[node name="MasterSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_kumj3")
theme_override_icons/grabber_highlight = ExtResource("3_kumj3")
theme_override_icons/grabber_disabled = ExtResource("3_kumj3")
tick_count = 15

[node name="SfxLabel" type="Label" parent="AudioOptions/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Sfx"

[node name="SfxSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_kumj3")
theme_override_icons/grabber_highlight = ExtResource("3_kumj3")
theme_override_icons/grabber_disabled = ExtResource("3_kumj3")
max_value = 1.0
step = 0.05
tick_count = 15

[node name="BrightnessLabel" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
min_value = 0.05
max_value = 1.15
step = 0.01
value = 0.5
tick_count = 15
script = ExtResource("5_c25o4")

[node name="Apply" type="Button" parent="AudioOptions"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -111.0
offset_right = -50.0
offset_bottom = -79.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 20
text = "Apply"

[node name="Back_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -83.0
offset_right = 21.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Back"

[node name="Checks" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -672.0
offset_top = 69.0
offset_right = -656.0
offset_bottom = 176.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/separation = 10

[node name="Fullscreen" type="CheckBox" parent="Checks"]
layout_mode = 2
theme = ExtResource("5_ugnno")
button_group = ExtResource("7_twvdu")

[node name="Borderless" type="CheckBox" parent="Checks"]
layout_mode = 2
theme = ExtResource("5_ugnno")
button_group = ExtResource("7_twvdu")

[node name="Windowed" type="CheckBox" parent="Checks"]
layout_mode = 2
theme = ExtResource("5_ugnno")
button_group = ExtResource("7_twvdu")

[node name="VSync" type="CheckBox" parent="Checks"]
layout_mode = 2
theme = ExtResource("5_ugnno")
button_pressed = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = 68.0
offset_right = 694.0
offset_bottom = 270.0
grow_vertical = 2

[node name="FullScreenLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Fullscreen
"

[node name="BorderlessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Borderless
"

[node name="WindowedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "Windowed"

[node name="VSyncLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_3yxio")
theme_override_font_sizes/font_size = 32
text = "VSync
"

[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/MasterSlider" to="AudioOptions" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SfxSlider" to="AudioOptions" method="_on_sfx_slider_mouse_exited"]
[connection signal="value_changed" from="AudioOptions/VBoxContainer/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="pressed" from="AudioOptions/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Checks/Windowed" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Checks/Windowed" to="." method="_on_windowed_toggled"]
[connection signal="toggled" from="Checks/VSync" to="." method="_on_v_sync_toggled"]
